// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when checked 1`] = `
<div
  className="components-checkbox-index-m__container"
>
  <input
    checked={true}
    className="components-checkbox-index-m__checkbox"
    id="checkbox_1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="components-checkbox-index-m__label"
    htmlFor="checkbox_1"
  >
    <div
      id="child"
    />
  </label>
  <FaCheck
    className="components-checkbox-index-m__checkmark"
  />
</div>
`;

exports[`should render correctly when has an error 1`] = `
<div
  className="components-checkbox-index-m__container-error components-checkbox-index-m__container"
>
  <input
    checked={true}
    className="components-checkbox-index-m__checkbox"
    id="checkbox_3"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="components-checkbox-index-m__label"
    htmlFor="checkbox_3"
  >
    <div
      id="child"
    />
  </label>
  <FaCheck
    className="components-checkbox-index-m__checkmark"
  />
</div>
`;

exports[`should render correctly when not checked 1`] = `
<div
  className="components-checkbox-index-m__container"
>
  <input
    checked={false}
    className="components-checkbox-index-m__checkbox"
    id="checkbox_2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="components-checkbox-index-m__label"
    htmlFor="checkbox_2"
  >
    <div
      id="child"
    />
  </label>
</div>
`;
